# edge-detector

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.txt  input.pgm  input_2.pgm  out.pgm  out_2.pgm  test_circle.pgm
Images/: PengBrew_out.pgm  convert.ipynb  inter10.pgm  inter100.pgm  inter1000.pgm  inter1010.pgm  inter1020.pgm  inter1030.pgm  inter1040.pgm  inter1050.pgm  inter1060.pgm  inter1070.pgm  inter1080.pgm  inter1090.pgm  inter110.pgm  inter1100.pgm  inter1110.pgm  inter1120.pgm  inter1130.pgm  inter1140.pgm  inter1150.pgm  inter1160.pgm  inter1170.pgm  inter1180.pgm  inter1190.pgm  inter120.pgm  inter1200.pgm  inter1210.pgm  inter1220.pgm  inter1230.pgm  inter1240.pgm  inter1250.pgm  inter1260.pgm  inter1270.pgm  inter1280.pgm  inter1290.pgm  inter130.pgm  inter1300.pgm  inter1310.pgm  inter1320.pgm  (+312 more)
include/: EdgeDetector.hpp  GridFunction.hpp  Parameters.hpp  scalar_function.hpp
output/: img.pgm  main  other.pgm  test.pgm  test_neg.pgm  test_neu.pgm
src/: Config.cpp  EdgeDetector.cpp  GridFunction.cpp  Parameters.cpp  main.cpp  scalar_function.cpp  scalar_function.hpp
